--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -105,7 +105,7 @@
 
     <div id="item_list">
       <ul>
-        <li data-snip="itemadd" id="itemadd" data-permissions="write">
+        <li data-permissions="write">
           <div class="item_box">
             <img class="add_item" src="/static/images/add-item.png" />
           </div>
