--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -6,8 +6,8 @@
 </head>
 
 <body>
-  <div id="content" class="center">
-    <div id="item_list" class="cat_content">
+  <div id="content" class="center page">
+    <div id="item_list">
       <ul>
         <li data-permissions="write">
           <div class="cat_box">
