--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <div id="content" class="center">
+  <div id="content" class="center page">
     <div class="product_content">
       <div class="navigation">
         <a href="/" data-loc="categories"></a> <span>/</span>
