--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -1,7 +1,6 @@
 <html data-template="common">
 <head>
 <link href="/static/css/chosen.min.css" rel="stylesheet" type="text/css" />
-<link href="/static/css/basic.css" rel="stylesheet" type="text/css" />
 
 <script type="text/javascript" src="/static/js/chosen.jquery.min.js"></script>
 <script type="text/javascript" src="/static/js/jquery.elevateZoom-3.0.8.min.js"></script>
@@ -14,7 +13,7 @@
 
 <body>
 
-  <div id="content" class="center">
+  <div id="content" class="center page">
     <div class="navigation">
       <a href="/" data-loc="categories"></a><span> | </span> <span data-loc="sort"></span> <select id="sortSelect" data-placeholder="...">
         <option value=""></option>
