--- a/shopweb/web/terms.html
+++ b/shopweb/web/terms.html
@@ -1,6 +1,6 @@
 <html data-template="common">
 <body>
-  <div id="content" class="center">
+  <div id="content" class="center page">
     <div class="terms">
       <h1>Termeni si conditii</h1>
     </div>
