--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -31,7 +31,7 @@
         <div class="title_dialog">
           <h1 data-loc="new.product"></h1>
         </div>
-        <div class="close_dialog">
+        <div class="close_product_dialog">
           <img src="/static/images/close.png" />
         </div>
         <div class="content_dialog">
