--- a/shopweb/web/accountsettings.html
+++ b/shopweb/web/accountsettings.html
@@ -69,7 +69,7 @@
 
             <div id="update_user">
               <div class="row bordertop top20 paddingtop10">
-                <a href="#" data-loc="save"></a>
+                <a class="btn" href="#" data-loc="save"></a>
               </div>
             </div>
           </div>
