--- a/shopweb/web/accountsettings.html
+++ b/shopweb/web/accountsettings.html
@@ -57,7 +57,7 @@
                 </div>
               </div>
             </div>
-            <div class="fields top20 paddingtop20 bordertop">
+            <div class="fields paddingtop20 bordertop">
               <div class="row">
                 <label for="update_password" data-loc="password"></label><input id="update_password" type="password" name="update_password" />
               </div>
