--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -60,7 +60,7 @@
       </div>
       <div class="dialog_footer">
         <div id="create_category">
-          <a href="#" data-loc="save"></a>
+          <a href="#" class="btn" data-loc="save"></a>
         </div>
       </div>
     </div>
@@ -92,7 +92,7 @@
       </div>
       <div class="dialog_footer">
         <div id="update_category">
-          <a href="#" data-loc="save"></a>
+          <a href="#" class="btn" data-loc="save"></a>
         </div>
       </div>
     </div>
