--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -96,7 +96,7 @@
          </form>
        </div>
        <div class="dialog_footer">
-          <div id="create_product"><a href="#" data-loc="create.product"></a></div>
+          <div id="create_product"><a href="#" class="btn" data-loc="create.product"></a></div>
        </div>
       </div>
     </div>
