--- a/shopweb/web/accountsettings.html
+++ b/shopweb/web/accountsettings.html
@@ -6,7 +6,7 @@
 <body>
   <div id="content" class="center page">
     <div class="column">
-      <form action="/update/settings" id="updatesettings_form" method="POST">
+      <form action="/update/settings" id="updatesettings_form" method="POST" data-snip="settingsForm">
         <div class="column left30 userinputs">
           <div class="accordion">
             <div class="accordion_title clickable">
@@ -80,37 +80,14 @@
               <label for="addr_name">Adauga adresa</label> <input class="left" id="addr_name" type="text" />
             </div>
           </div>
-          <div id="addresses" class="accordion"></div>
+          <div id="addresses" class="accordion">
+            <div data-snip="addresses"></div>
+          </div>
         </div>
       </form>
     </div>
 
-    <div class="address_template">
-      <div class="accordion_title clickable">
-        <div class="column">
-          <a class="addr_title" href=""></a>
-        </div>
-        <div class="right del">
-          <a href=""><img src="/static/images/minus.png" /></a>
-        </div>
-      </div>
-      <div class="accordion_content">
-        <div class="fields">
-          <div class="row">
-            <label for="addr_region" data-loc="region"></label><input id="addr_region" type="text" name="addr_region" />
-          </div>
-          <div class="row">
-            <label for="addr_city" data-loc="city"></label><input id="addr_city" type="text" name="addr_city" />
-          </div>
-          <div class="row">
-            <label for="addr_addr" data-loc="address"></label><input id="addr_addr" type="text" name="addr_addr" />
-          </div>
-          <div class="row">
-            <label for="addr_zip" data-loc="zip"></label><input id="addr_zip" type="text" name="addr_zip" />
-          </div>
-        </div>
-      </div>
-    </div>
+    <div data-snip="address_template"></div>
   </div>
 
 </body>
