--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -28,6 +28,9 @@
             <div class="detailPrice">
               <span data-snip="detailPrice"></span>
             </div>
+            <div class="stock">
+              <span data-snip="stock"></span>
+            </div>
           </div>
           <div class="tab_select">
             <ul id="product_details_tab">
