--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -28,7 +28,7 @@
     <div id="product_create_dialog">
       <div class="product_content quickview">
         <div class="title_dialog">
-          <h1 data-loc="new.product"></h1>
+          <h2 data-loc="new.product"></h2>
         </div>
         <div class="close_product_dialog">
           <img src="/static/images/close.png" />
@@ -104,8 +104,7 @@
     <div id="item_list">
       <ul>
         <li data-permissions="write">
-          <div class="item_box">
-            <img class="add_item" src="/static/images/add-item.png" />
+          <div class="item_box add_item">
           </div>
         </li>
         <li data-snip="item">
