--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -22,13 +22,16 @@
       <div id="pright">
         <div class="prod_details">
           <div class="prod_header">
+            <div id="fb-share-button">
+              <a href="#"><img src="/static/images/facebook.png" /></a>
+            </div>
             <div id="add_to_cart_box">
               <a id="add_to_cart" href="#"><img src="/static/images/cart_black.png" /></a>
             </div>
             <div class="detailPrice">
               <span data-snip="detailPrice"></span>
             </div>
-            <div class="stock">
+            <div class="prod_price_line">
               <span data-snip="stock"></span>
             </div>
           </div>
@@ -45,9 +48,13 @@
           <div id="prod_specs" class="prod_specs">
             <div data-snip="specs">
               <div class="row">
-             	<div class="column1"><span class="prop_name"></span></div>
-             	<div class="column2"><span class="prop_value"></span></div>
-             </div>
+                <div class="column1">
+                  <span class="prop_name"></span>
+                </div>
+                <div class="column2">
+                  <span class="prop_value"></span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
