--- a/shopweb/web/terms.html
+++ b/shopweb/web/terms.html
@@ -2,7 +2,148 @@
 <body>
   <div id="content" class="center page">
     <div class="terms">
-      <h1>Termeni si conditii</h1>
+      <div class="page_text">
+        <p>
+          Vizitarea, folosirea, sau comandarea produselor vizualizate pe site-ul <strong>www.idid.ro</strong> implica acceptarea
+          Conditiilor de utilizare ce vor fi detaliate mai jos. Pentru folosirea in bune conditii a site-ului, se recomanda citirea cu
+          atentie a Termenilor si Conditiilor.
+        </p>
+        <p>
+          <strong><strong>www.idid.ro</strong>&amp;nbsp;este administrat de&amp;nbsp;<br/></strong><strong>SC TASTE OF ASIA
+            SRL-D&amp;nbsp;cu sediul in Cluj Napoca,&amp;nbsp;Strada Somesului 5-7, Inregistrata la Registrul Comertului cu nr J12/647/2014,
+            CUI&amp;nbsp;32843193, capital social 200RON.</strong>
+        </p>
+        <p>
+          Ne rezervam dreptul de a efectua modificari ale acestor Termeni si Conditii precum si orice modificari site-ului <strong>www.idid.ro</strong>&amp;nbsp;fara
+          o notificare prealabila. Accesand pagina Termeni si Conditii, puteti citi intotdeauna cea mai recenta versiune a acestor
+          prevederi.
+        </p>
+        <p>
+          <strong><span style="text-decoration: underline;">Obligatiile dumneavoastra de inregistrare:</span></strong>
+        </p>
+        <p>Pentru a putea cumpara de pe www.idid.ro, trebuie sa introduceti datele dumneavoastra pe website-ul nostru.</p>
+        <p>In utilizarea serviciului, declarati ca veti furniza informatii reale, corecte, actuale si complete despre dumneavoastra.</p>
+        <p>In situatia in care consideram ca aceasta obligatie a fost incalcata, ne rezervam dreptul de a va bloca&amp;nbsp; accesul la
+          utilizarea serviciului, pe perioada determinata sau nedeterminata, fara nicio notificare prealabila.</p>
+        <p>
+          <strong><span style="text-decoration: underline;">Pret si modalitati de plata:</span></strong>
+        </p>
+        <p>
+          <span>SOCIETATEA NOASTRA NU ESTE PLATITOARE DE TVA</span>
+        </p>
+        <p>
+          <span>Pretul de achizitie prezentat pe factura va fi acelasi cu cel prezentat pe site la momentul achizitiei, pret la care
+            se adauga si costurile de livrare.</span>
+        </p>
+        <p>
+          <span>Plata produselor se efectueaza in numerar/cash, la livrarea produsului.</span>
+        </p>
+        <p>
+          <strong><span style="text-decoration: underline;">Informatii privitoare la livrare:</span></strong>
+        </p>
+        <p>Termenul de livrare este de maxim 4 zile lucratoare, socotit de la data preluarii comenzii dumneavoastra. Acest termen poate
+          fi modificat din motive independente de vointa noastra.</p>
+        <p>
+          <span>Comenzile plasate de </span><strong>Luni pana Vineri inainte de ora 15:00</strong><span>&amp;nbsp;se expediaza&amp;nbsp;</span><strong>in
+            aceeasi zi</strong><span>.</span><br/>
+          <span>Comenzile plasate de</span><strong>&amp;nbsp;Luni pana Joi dupa ora 15:00</strong><span>&amp;nbsp;se expediaza&amp;nbsp;</span><strong>in
+            ziua urmatoare</strong><span>.</span><br/>
+          <span>Comenzile plasate&amp;nbsp;</span><strong>Vineri dupa ora 15:00, Sambata sau Duminica</strong><span>&amp;nbsp;se
+            expediaza&amp;nbsp;</span><strong>Luni</strong><span>.</span>
+        </p>
+        <p>Taxele de livrare &amp;nbsp;sunt calculate cu taxa pe valoare adaugata (TVA) inclus si sunt urmatoarele:</p>
+        <p style="text-align: center;">CARGUS CURIER : 20 de LEI (toate taxele incluse)</p>
+        <p>
+          Livrarea se face de catre o societate de curierat, la domiciliul clientului, <span style="text-decoration: underline;">in
+            termen de 2 zile</span> de la expedierea comenzii, si poate ajunge la destinatie dupa maxim 48 ore.
+        </p>
+        <p>In cazul in care doriti sa specificati anumite aspecte referitoare la livrare cum ar fi: ora de livrare, adresa sau puncte de
+          reper, va rugam sa introduceti in casuta de observatii aceste lucruri inainte de finalizarea comenzii.</p>
+        <p>In ziua in care coletul cu comanda dumneavoastra va fi expediat, veti fi instiintat prin e-mail sau telefonic de catre noi.</p>
+        <p>Coletul poate fi preluat de orice membru al familiei.</p>
+        <p>Produsele se livreaza in limita stocului disponibil. In cazul in care unul sau mai multe dintre produsele comandate nu se mai
+          afla pe stoc veti fi instiintat in acest sens. In unele cazuri, produsul comandat poate fi inlocuit cu unul asemanator daca
+          dumneavoastra doriti si sunteti de acord cu acest lucru.</p>
+        <p>Raspunderea pentru orice deteriorare cauzata produsului, coletului sau pachetului trimis de catre noi, revine societatii de
+          curierat sau transportatorului conform legislatiei in vigoare. Produsele vor fi inlocuite de catre noi daca se va face dovada
+          culpei curierului si daca vom fi instiintati la preluarea coletului.</p>
+        <p>
+          <strong><span style="text-decoration: underline;">Drepturile de autor (Copyright) </span></strong><strong></strong>
+        </p>
+        <p>
+          Intregul continut al site-ului&amp;nbsp;www.idid.ro, incluzand, texte, imagini, grafice, elemente de grafica web, scripturi si
+          orice alte date, este proprietatea SC TASTE OF ASIA SRL-D. sau a furnizorilor sai si este protejat conform Legii drepturilor de
+          autor si legilor privind dreptul de proprietate intelectuala si industriala. Folosirea fara acordul scris a oricaror elemente de
+          pe site-ul www.idid.ro, sau a oricaror elemente enumerate mai sus se pedepseste conform legilor in vigoare. Pentru a reclama
+          drepturile de proprietate intelectuala puteti folosi adresa de mail <strong>office@idid.ro</strong>
+        </p>
+        <p>
+          <strong><span style="text-decoration: underline;">Politica de confidentialitate</span></strong>
+        </p>
+        <p>Datele cu caracter personal vor putea fi dezvaluite fara consimtamântul dumneavoastra în caz de litigii/dispute privind
+          fraudele la plata catre urmatorii destinatari: Bancile implicate în platile online, Organismele Internationale de Carduri si
+          Furnizori de servicii/produse, respectiv conform Legii, catre institutiile abilitate.</p>
+        <p>In conformitate cu dispozitiile Legii nr.677/200, clientii nostril au urmatoarele drepturi,:</p>
+        <p>1)&amp;nbsp; Dreptul la informare (art.12)</p>
+        <p>2)&amp;nbsp; Dreptul la acces la date (art.13) - dreptul de a obtine, la cerere si în mod gratuit, pentru o solicitare pe an,
+          confirmarea ca datele care o privesc sunt sau nu sunt prelucrate de operatorul de date.</p>
+        <p>3)&amp;nbsp; Dreptul la interventie (art.14) - dreptul de a solicita operatorului de date, printr-o cerere scrisa si în mod
+          gratuit, urmatoarele:</p>
+        <p>&amp;nbsp;&amp;nbsp;&amp;nbsp; a)&amp;nbsp; rectificarea, actualizarea, blocarea sau stergerea datelor incomplete, inexacte sau prelucrarilor
+          nelegale;</p>
+        <p>&amp;nbsp;&amp;nbsp;&amp;nbsp; b)&amp;nbsp; transformarea datelor personale nelegale în date anonime;</p>
+        <p>&amp;nbsp;&amp;nbsp;&amp;nbsp; c)&amp;nbsp; notificarea tertilor cu privire la operatiunile prevazute la lit. a) si b).</p>
+        <p>4)&amp;nbsp; Dreptul la opozitie (art.15) - dreptul de a se opune, în mod gratuit si printr-o cerere scrisa, din motive
+          întemeiate si legitime legate de situatia sa particulara, ca datele care o vizeaza sa faca obiectul unei prelucrari.</p>
+        <p>5)&amp;nbsp; Dreptul de a se adresa justitiei (art.18) - dreptul de a se adresa justitiei pentru apararea drepturilor garantate
+          de lege si care au fost încalcate.</p>
+        <p>6)&amp;nbsp; Dreptul de a face plângere la autoritatea de supraveghere (art.25).</p>
+        <p>
+          <strong><span style="text-decoration: underline;">Responsabilitati privind produsele </span></strong><strong></strong>
+        </p>
+        <p>SC TASTE OF ASIA SRL-D&amp;nbsp;nu isi asuma responsabilitatea si nu poate fi facuta responsabila pentru orice pagube aparute
+          prin folosirea produselor achizitionate prin intermediul acestui site, in alte scopuri decat cele mentionate de producator.
+          Returnarea produselor se poate efectua in conformitate cu dispozitiile OG 130/2000, iar pentru mai multe detalii va rugam sa
+          vizitati sectiunea “ Schimb/Returnare produs “</p>
+        <p>
+          <strong><span style="text-decoration: underline;">&amp;nbsp;</span></strong>
+        </p>
+        <p>
+          <strong><span style="text-decoration: underline;">Limitari privind utilizarea anumitor tehnici de comunicatie la
+              distanta</span></strong>
+        </p>
+        <p>
+          Art. 1. - Urmatoarele tehnici de comunicatie la distanta necesita acordul prealabil al consumatorului: <br/> a) sistem
+          automatizat de apel fara interventie umana (automat de apel); <br/> b) telecopiator (fax)<br/> c) adresa de posta
+          electronica (e-mail)
+        </p>
+        <p>Art. 2. - Utilizarea altor tehnici de comunicatie individuala la distanta in afara celor prevazute la art. 1 nu este permisa
+          daca exista un refuz manifestat de consumator.</p>
+        <p>
+          <strong><br/> </strong>Lista cuprinzand tehnicile de comunicatie la distanta<br/> a) imprimat neadresat; <br/> b)
+          imprimat adresat; <br/> c) scrisoare tipizata; <br/> d) publicitate tiparita cu bon de comanda; <br/> e) catalog; <br/>
+          f) telefon cu interventie umana; <br/> g) telefon fara interventie umana (automat de apel, audiotext); <br/> h) radio; <br/>
+          i) videofon (telefon cu imagine); <br/> j) videotext (microordinator, ecran Tv cu tastatura sau ecran tactil); <br/> k)
+          posta electronica (e-mail); <br/> l) telecopiator (fax); <br/> m) televiziune (teleshopping).
+        </p>
+        <p>
+          <strong><span style="text-decoration: underline;">Litigii </span></strong><strong></strong>
+        </p>
+        <p>Prin folosirea,vizualizarea sau cumpararea produselor de pe acest site, utilizatorul a luat la cunostinta asupra faptului ca
+          legile romane vor guverna Termenii si Conditiile de mai sus si orice disputa de orice fel care ar putea sa apara intre utilizator
+          si SC TASTE OF ASIA SRL-D. In cazul unor eventuale conflicte intre SC TASTE OF ASIA SRL-D&amp;nbsp;si clientii sai, se va incerca mai
+          intai rezolvarea acestora pe cale amiabila in minim 30 de zile lucratoare.</p>
+        <p>Daca rezolvarea pe cale amiabila nu va fi posibila, conflictul va fi solutionat in instanta competenta in conformitate cu
+          legile romane in vigoare.</p>
+        <p>
+          <strong><span style="text-decoration: underline;">Diverse</span></strong>
+        </p>
+        <p>Daca oricare dintre clauzele de mai sus va fi gasita nula sau nevalida, indiferent de cauza, aceasta nu va afecta
+          valabilitatea celorlalte clauze. Odata cu lansarea comenzii, clientul accepta fara obiectiuni Conditiile si termenii de utilizare,
+          valoarea acestora fiind aceeasi cu un contract valabil incheiat.</p>
+        <p>Fiind de acord cu acesti Termeni si Conditii clientul isi isi asuma in totalitate drepturile si obligatiile ce decurg din
+          cumpararea din magazinul virtual www.idid.ro.</p>
+      </div>
     </div>
   </div>
 </body>
