--- a/shopweb/web/dataprotection.html
+++ b/shopweb/web/dataprotection.html
@@ -4,30 +4,30 @@
     <div class="terms">
       <div class="page_text">
         <p align="center" style="text-align: justify;">
-          IDID SHOP SRL garantează securitatea și confidențialitatea datelor găzduite și transmise prin sistemul sau informatic.
-          Aceste informații vor putea fi folosite de catre IDID SHOP SRL pentru emiterea facturii, livrarea produselor, confirmarea
-          comenzilor, diverse oferte speciale, promoții, etc.. Utilizatorii site-ului pot solicita ștergerea informațiilor din baza de date.
+          SC IDID SHOP SRL garantează securitatea și confidențialitatea datelor găzduite și transmise prin sistemul sau informatic.
+          Aceste informații vor putea fi folosite de catre SC IDID SHOP SRL pentru emiterea facturii, livrarea produselor, confirmarea
+          comenzilor, diverse oferte speciale, promoții, etc... Utilizatorii site-ului pot solicita ștergerea informațiilor din baza de date.
           Orice solicitare/notificare în vederea ștergerii&amp;nbsp;informațiilor&amp;nbsp;din baza de date va fi trimisă de către persoana înscrisă
           în baza de date prin e-mail la adresa <a href="mailto:contact@koreanfood.ro">office@idid.ro</a>
         </p>
         <p style="text-align: justify;">Comerciantul se obligă ca datele personale să nu fie difuzate către terți.</p>
-        <p style="text-align: justify;">Datorită faptului ca datele cu caracter personal sunt transmise pe cale electronică, societatea
-          IDID SHOP SRL nu poate fi făcută răspunzatoare in nici un fel de pierderea acestora sau de copierea informațiilor de către
+        <p style="text-align: justify;">Datorită faptului că datele cu caracter personal sunt transmise pe cale electronică, societatea
+          SC IDID SHOP SRL nu poate fi făcută răspunzatoare in nici un fel de pierderea acestora sau de copierea informațiilor de către
           persoane neautorizate.</p>
-        <p style="text-align: justify;">Informațiile furnizate către IDID SHOP SRL sunt folosite numai în scopul pentru care au
-          fost introduse conform legilor in vigoare.</p>
+        <p style="text-align: justify;">Informațiile furnizate către SC IDID SHOP SRL sunt folosite numai în scopul pentru care au
+          fost introduse conform legilor în vigoare.</p>
         <p style="text-align: justify;">
-          Societatea IDID SHOP SRL <span>este inregistrata in Registrul de evidenta a prelucrarilor de date cu caracter
-            personal sub numarul&amp;nbsp;<span>31343.</span>
-          </span>&amp;nbsp;IDID SHOP SRL garantează respectarea drepturilor conferite de Legea nr. 677/2001 privind protecția persoanelor cu
+          Societatea SC IDID SHOP SRL <span>este înregistrata în Registrul de evidență  a prelucrarilor de date cu caracter
+            personal sub numărul&amp;nbsp;<span>31343.</span>
+          </span>&amp;nbsp;SC IDID SHOP SRL garantează respectarea drepturilor conferite de Legea nr. 677/2001 privind protecția persoanelor cu
           privire la prelucrarea datelor cu caracter personal și libera circulație a acestor date, de Legea nr. 365/2002 privind comerțul
           electronic, precum și de Ordonanța nr. 130/2000 privind protecția consumatorilor la încheierea și executarea contractelor la
           distanță, cu modificările ulterioare.
         </p>
         <p style="text-align: justify;">Conform cerinţelor Legii nr. 677/2001 pentru protecţia persoanelor cu privire la prelucrarea
           datelor cu caracter personal şi libera circulaţie a acestor date, modificată şi completată, şi Legii nr. 102/2005 privind
-          înfiinţarea şi funcţionarea Autorităţii Naţionale de Supraveghere a Prelucrării Datelor cu Caracter Personal, SC TASTE OF ASIA
-          SRL-D, în calitate de operator date cu caracter personal, are obligaţia de a administra în condiţii de siguranţă şi numai pentru
+          înfiinţarea şi funcţionarea Autorităţii Naţionale de Supraveghere a Prelucrării Datelor cu Caracter Personal, SC IDID SHOP SRL,
+          în calitate de operator date cu caracter personal, are obligaţia de a administra în condiţii de siguranţă şi numai pentru
           scopurile specificate, datele personale furnizate de client. Ne obligăm că datele cu caracter personal vor fi:</p>
         <p style="text-align: justify;">* prelucrate cu bună credinţă şi în conformitate cu dispoziţiile legale;</p>
         <p style="text-align: justify;">* colectate în scopuri determinate, explicite şi legitime;</p>
@@ -87,7 +87,7 @@
           garantează respectarea dreptului de opoziţie la prelucrarea datelor personale care vă privesc şi de a solicita ştergerea datelor,
           cu excepţia datelor a căror prelucrare are caracter obligatoriu, respectiv prelucrări efectuate de serviciile financiare şi
           fiscale, de poliţie, justiţie, securitate socială.</p>
-        <p style="text-align: justify;">Societatea IDID SHOP SRL, în calitate de operator de date cu caracter personal, îi revin
+        <p style="text-align: justify;">Societatea SC IDID SHOP SRL, în calitate de operator de date cu caracter personal, îi revin
           următoarele obligaţii de informare:</p>
         <p style="text-align: justify;">* În cazul în care datele cu caracter personal sunt obţinute direct de la persoana vizată, cu
           excepţia cazului în care această persoană posedă deja informaţiile respective, operatorul ii va aduce la cunoştinţă:</p>
@@ -103,8 +103,8 @@
           o cerere scrisă, datată şi semnată.</p>
         <p style="text-align: justify;">Dreptul de acces</p>
         <p style="text-align: justify;">Orice persoană vizată are dreptul de a obţine de la SC IDID SHOP SRL, la cerere şi în mod
-          gratuit pentru o solicitare pe an, confirmarea faptului că datele care o privesc sunt sau nu sunt prelucrate de acesta. SX TASTE
-          OF ASIA SRL-D este obligat, în situaţia în care prelucrează date cu caracter personal care privesc solicitantul, să comunice
+          gratuit pentru o solicitare pe an, confirmarea faptului că datele care o privesc sunt sau nu sunt prelucrate de acesta. SC IDID SHOP SRL 
+          este obligat, în situaţia în care prelucrează date cu caracter personal care privesc solicitantul, să comunice
           acestuia, împreună cu confirmarea, cel puţin următoarele:</p>
         <p style="text-align: justify;">a)informaţii referitoare la scopurile prelucrării, categoriile de date avute în vedere şi
           destinatarii sau categoriile de destinatari cărora le sunt dezvăluite datele;</p>
@@ -116,24 +116,24 @@
           opoziţie, precum şi condiţiile în care pot fi exercitate;</p>
         <p style="text-align: justify;">e)informaţii asupra posibilităţii de a consulta registrul de evidenţă a prelucrărilor de date cu
           caracter personal, prevăzut la art. 24 din Legea 677/2001, de a înainta plângere către autoritatea de supraveghere, precum şi de a
-          se adresa instanţei pentru atacarea deciziilor IDID SHOP SRL, în conformitate cu dispoziţiile prezentei legi.</p>
-        <p style="text-align: justify;">(2)Persoana vizată poate solicita de la IDID SHOP SRL informaţiile printr-o cerere
+          se adresa instanţei pentru atacarea deciziilor SC IDID SHOP SRL, în conformitate cu dispoziţiile prezentei legi.</p>
+        <p style="text-align: justify;">(2)Persoana vizată poate solicita de la SC IDID SHOP SRL informaţiile printr-o cerere
           întocmită în formă scrisă, datată şi semnată. În cerere solicitantul poate arăta dacă doreşte ca informaţiile să îi fie comunicate
           la o anumită adresă, care poate fi şi de poştă electronică, sau printr-un serviciu de corespondenţă care să asigure că predarea i
           se va face numai personal.</p>
-        <p style="text-align: justify;">(3)IDID SHOP SRL este obligat să comunice informaţiile solicitate, în termen de 15 zile de
+        <p style="text-align: justify;">(3)SC IDID SHOP SRL este obligat să comunice informaţiile solicitate, în termen de 15 zile de
           la data primirii cererii.</p>
         <p style="text-align: justify;">Dreptul de intervenţie asupra datelor</p>
-        <p style="text-align: justify;">Orice persoană vizată are dreptul de a obţine de la IDID SHOP SRL, la cerere şi în mod
+        <p style="text-align: justify;">Orice persoană vizată are dreptul de a obţine de la SC IDID SHOP SRL, la cerere şi în mod
           gratuit:</p>
         <p style="text-align: justify;">a) rectificarea, actualizarea, blocarea sau ştergerea datelor a căror prelucrare nu este
           conformă prezentei legi, în special a datelor incomplete sau inexacte;</p>
         <p style="text-align: justify;">b) transformarea în date anonime a datelor a căror prelucrare nu este conformă Legii 677/2001</p>
-        <p style="text-align: justify;">Pentru interventia asupra datelor persoana vizată va înainta IDID SHOP SRL o cerere
+        <p style="text-align: justify;">Pentru interventia asupra datelor persoana vizată va înainta SC IDID SHOP SRL o cerere
           întocmită în formă scrisă, datată şi semnată. În cerere solicitantul poate arăta dacă doreşte ca informaţiile să îi fie comunicate
           la o anumită adresă, care poate fi şi de poştă electronică, sau printr-un serviciu de corespondenţă care să asigure că predarea i
           se va face numai personal.</p>
-        <p style="text-align: justify;">IDID SHOP SRL este obligat să comunice măsurile referitoare la persoana vizată, în termen
+        <p style="text-align: justify;">SC IDID SHOP SRL este obligat să comunice măsurile referitoare la persoana vizată, în termen
           de 15 zile de la data primirii cererii</p>
         <p style="text-align: justify;">Dreptul de opoziţie</p>
         <p style="text-align: justify;">Persoana vizată are dreptul de a se opune în orice moment, din motive întemeiate şi legitime
@@ -142,17 +142,17 @@
         <p style="text-align: justify;">Persoana vizată are dreptul de a se opune în orice moment, în mod gratuit şi fără nici o
           justificare, ca datele care o vizează să fie prelucrate în scop de marketing direct, în numele operatorului sau al unui terţ, sau
           să fie dezvăluite unor terţi într-un asemenea scop.</p>
-        <p style="text-align: justify;">În vederea exercitării drepturilor persoana vizată va înainta IDID SHOP SRL o cerere
+        <p style="text-align: justify;">În vederea exercitării drepturilor persoana vizată va înainta SC IDID SHOP SRL o cerere
           întocmită în formă scrisă, datată şi semnată. În cerere solicitantul poate arăta dacă doreşte ca informaţiile să îi fie comunicate
           la o anumită adresă, care poate fi şi de poştă electronică, sau printr-un serviciu de corespondenţă care să asigure că predarea i
           se va face numai personal.</p>
-        <p style="text-align: justify;">IDID SHOP SRL este obligat să comunice persoanei vizate măsurile luate în termen de 15
+        <p style="text-align: justify;">SC IDID SHOP SRL este obligat să comunice persoanei vizate măsurile luate în termen de 15
           zile de la data primirii cererii, cu respectarea eventualei opţiuni a solicitantului.</p>
         <p style="text-align: justify;">5. Încheierea operaţiunilor de prelucrare a datelor cu caracter personal</p>
         <p style="text-align: justify;">Datele prelucrate vor fi stocate, conform art. 4 alin. (1) lit. e) din Legea nr. 677/2001, pe
           durata necesară realizării scopurilor în vederea cărora au fost colectate şi ulterior prelucrate.</p>
         <p style="text-align: justify;">6. Măsuri luate pentru asigurarea securităţii prelucrării</p>
-        <p style="text-align: justify;">IDID SHOP SRL ia toate măsurile tehnice şi organizatorice adecvate pentru protejarea
+        <p style="text-align: justify;">SC IDID SHOP SRL ia toate măsurile tehnice şi organizatorice adecvate pentru protejarea
           datelor cu caracter personal împotriva distrugerii accidentale sau ilegale, pierderii, modificării, dezvăluirii sau accesului
           neautorizat.</p>
       </div>
