--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -77,14 +77,14 @@
               </div>
 
               <div id="create_textzone" class="form_textzone tab_content">
-                <div class="row">
+                <div class="row box">
                   <label for="create_description" data-loc="description"></label>
                   <div id="create_toggle_desc" class="clickable right">
                     <div class="create_toggle_text" data-loc="view"></div>
                     <div class="create_toggle_text hidden" data-loc="edit"></div>
                   </div>
                 </div>
-                <textarea class="create_toggle" id="create_description" name="create_description"></textarea>
+                <textarea class="create_toggle box" id="create_description" name="create_description"></textarea>
                 <div class="create_toggle preview" id="create_description_view"></div>
               </div>
 
