--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -65,6 +65,14 @@
                   <div class="row">
                     <label for="create_keywords" data-loc="keywords"></label> <input id="create_keywords" type="text" name="create_keywords" />
                   </div>
+                  <div class="row">
+                    <label for="create_stock" data-loc="stock"></label> <input id="create_stock" type="text" name="create__stock" />
+                  </div>
+                  <div class="row">
+                    <input id="create_unique" type="checkbox" name="create_unique" />
+                    <label for="create_unique" data-loc="unique.product"></label> 
+                  </div>
+                  
                 </div>
               </div>
 
@@ -115,6 +123,7 @@
                 <img src="/static/images/close.png" />
               </div>
             </div>
+            <div id="unique_ribbon" class="unique_label" data-loc="unique"></div>
             <div class="info_tag">
               <div class="info_tag_text"></div>
               <div class="info_tag_cart">
